<resources>
    <string name="app_name">Tu clínica</string>
    <!-- Strings related to login -->
    <string name="email">Correo</string>
    <string name="password">Clave</string>
    <string name="action_register">Registrar</string>
    <string name="action_sign">Ingresar</string>
    <string name="welcome">"Vienvenido !"</string>
    <string name="invalid_username">El usuario no se ha encontrado</string>
    <string name="invalid_password">La contraseña debe tener almenos 5 caracteres</string>
    <string name="login_failed">"Fallo el ingreso"</string>
    <string name="ok">Ok</string>
    <string name="confirm_password">Confirmar la clave</string>
    <string name="facebook_app_id">241605911000791</string>
    <string name="fb_login_protocol_scheme">fb241605911000791</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="clave">Clave</string>
    <string name="code">Código de activacion</string>
    <string name="option_mensual">$ 4.99 Mensual</string>
    <string name="option_semestral">$ 16.99 Trimestral</string>
    <string name="option_anual">$ 24.99 Anual</string>
    <string name="mensaje">Mensaje</string>
    <string name="clinica_hipnosis">Clinica hipnosis</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="comunidad">Comunidad</string>
    <string name="autohipnosis">Autohipnosis</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="todo3">TODO</string>
    <string name="configuracio_n">Configuración</string>
    <string name="chat">Chat</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="button_volver">button_volver</string>
    <string name="imagen">Clinica de Hipnosis</string>
    <string name="olvidoContrasena">¿Olvidaste tu clave?</string>
    <string name="menconfiguracion">Configuracion</string>
    <string name="mencerrarsesion">Salir</string>
    <string name="plantilla">LLENAR PLANTILLA DE CONDUCTA (OPCIONAL)</string>
    <!--String para botones -->
    <string name="btnConfiguracion">Configuración</string>
    <string name="btnInicio">Inicio</string>
    <string name="btnSalir">Salir</string>
    <string name="change">Cambiar</string>
    <string name="add_paymentet_to_continue">Agregar metodo de pago</string>


</resources>